<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/nav_statistics" />
    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/nav_budget" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu> 